--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,9 @@
 body {
   /* background-color: lightgreen;
      */
-  height: 100%;
-  /* background-image: url("../wallpaper.jpg");
-  animation: clouds_anim 75s linear infinite; */
+  /* height: 100%; */
+  background-image: url("../img/wallpaper.jpg");
+  animation: clouds_anim 75s linear infinite;
   /* background-repeat: no-repeat; */
 
   text-align: center;
