--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <div style = "color:blue">
+    <div style = "color:white; font:bold">
 
         <form action = "{{url_for('predict')}}" method = post>
              <h2>Predictive Analysis</h2>
